# Tp3POO

./: CMakeLists.txt  NotasTp.txt  main.cpp
Controle/: ControleEstudante.cpp  ControleEstudante.h  ControleProfessor.cpp  ControleProfessor.h
Entidade/: Estudante.cpp  Estudante.h  Professor.cpp  Professor.h  Turma.cpp  Turma.h
Persistencia/: DaoEstudante.cpp  DaoEstudante.h  DaoProfessor.cpp  DaoProfessor.h  DaoTurma.cpp  DaoTurma.h
